[tool.poetry]
name = "identity-mosaicker"
version = "0.0.1"
description = "身份证脱敏工具"
authors = ["songww <sww4718168@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "^3.4"
fire = {version = "^0.1.3",optional = true}
imutils = "^0.5.1"

[tool.poetry.dev-dependencies]
flake8-isort = "^2.5"
flake8-mypy = "^17.8"
pytest-mypy = "^0.3.2"
black = "^18.3-alpha.0"
matplotlib = "^3.0"

[tool.poetry.extras]
cli = ["fire"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
