[tool.poetry]
name = "identity-mosaicker"
version = "0.0.1"
description = "身份证脱敏工具"
authors = ["songww <sww4718168@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5"
fire = {version = "^0.4",optional = true}
imutils = "^0.5"

[tool.poetry.dev-dependencies]
flake8-isort = "^4"
flake8-mypy-fork = "^20.5"
pytest-mypy = "^0.8"
black = "^21.6b0"
matplotlib = "^3.4"

[tool.poetry.extras]
cli = ["fire"]

[build-system]
requires = ["poetry>=1"]
build-backend = "poetry.masonry.api"
